Security: Restrict H2 Console exposure and enforce explicit CORS origin allowlist